# docugenius

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: pypi-publish.yml  update-documentation.yaml
api-references/cli/: index.html
api-references/genius/: index.html
docs/: extending-docugenius.md  index.md  supported-models.md
docs/api-references/: cli.md  genius.md
docugenius/cli/: main.py
docugenius/common/: code_utils.py  file_utils.py
docugenius/genius/: __init__.py  genius.py  openai_genius.py
extending-docugenius/: index.html
search/: search_index.json
supported-models/: index.html
