[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "docugenius"
authors = [
    {name = "Samir Salman"}
]


requires-python = ">=3.10"
description = "Generate docustrings in seconds"
dependencies = [
    "openai==1.55.2",
    "mako==1.3.5"   
]
dynamic = ["version", "readme"]


[tool.setuptools.dynamic]
version = {attr="docugenius.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
include = ["docugenius*"]

[project.optional-dependencies]
dev = [
"mkdocs==1.6.1",
"mkdocs-material==9.5.48",
"mkdocstrings[python]"
]

[project.scripts]
docugenius = "docugenius.cli.main:main"